--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "fullcalendar": "^5.7.0",
     "instagram-private-api": "^1.44.1"
   }
 }
