--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "base64-async": "^2.1.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "fullcalendar": "^5.7.0",
